# AerialDetection

./: .gitignore
DOTA_devkit/: DOTA2COCO.py  ImgSplit.py  ImgSplit_multi_process.py  ResultMerge.py  prepare_dota1.py
configs/HRSC/: faster_rcnn_RoITrans_r50_fpn_1x_dota_hrsc2016.py  faster_rcnn_RoITrans_r50_fpn_1x_dota_hrsc2016_L2.py  faster_rcnn_RoITrans_r50_fpn_1x_dota_hrsc2016_L2_2.py
docker/: Dockerfile
mmdet/core/bbox/: __init__.py  bbox.c  bbox_target_rbbox.py  transforms_rbbox.py
mmdet/core/evaluation/: coco_utils.py
mmdet/core/mask/: utils.py
mmdet/datasets/: DOTA.py  HRSC.py  __init__.py  coco.py  custom.py  extra_aug.py
mmdet/models/detectors/: RoITransformer.py
mmdet/models/losses/: __init__.py  piou_loss.py
mmdet/models/plugins/: mdanet.py
mmdet/models/rbbox_heads/: rbbox_head.py
mmdet/ops/piou_loss/: CMakeLists.txt  pixel_weights.py
tools/: aerial_detection.py  analyze_logs.py  bceloss.py  eval.py  eval_hrsc2016.py  parse_results.py  test.py  train.py
